src/test/success/array_comparison.egern
var a = [1, 2, 4]
var b = [1, 2, 4]
var c = a

print(a == b)
print(a == a)
print(a == [1, 2, 4])
print(a == c)
print(a != b)
print(a != a)
print(a != [1, 2, 4])
print(a != c)
